--- a/cultural/style.css
+++ b/cultural/style.css
@@ -58,7 +58,7 @@ body {
     left: 0; 
     width: 100%; 
     height: 100%; 
-    z-index: 1; 
+    z-index: 0; 
     opacity: 0.5; 
 }
 
@@ -601,7 +601,8 @@ body.light-mode .registration-box {
     border-top: 2px solid var(--border-color);
     padding: 50px 20px 30px;
     text-align: center;
-    z-index: 10;
+    z-index: 100;
+    position: relative;
     transition: all 0.5s ease;
     box-shadow: 0 -5px 30px var(--shadow-color);
 }
